--- a/.github/workflows/deploy-pages.yml
+++ b/.github/workflows/deploy-pages.yml
@@ -20,7 +20,9 @@ jobs:
         with:
           node-version: 20
           cache: npm
-      - run: npm ci
+      - run: node -v && npm -v
+      - run: |
+          if [ -f package-lock.json ]; then npm ci; else npm install; fi
       - run: npm run build
         env:
           GITHUB_PAGES_BASE: /affirm-spam/
